--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,1 +1,18 @@
-<footer class="footer">footer</footer>
+<div class="footer">
+    <div class="footerList d-flex justify-between">
+        <div>
+           <h1>
+            <a href="#">URBNSTEP</a>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-circle-fill" viewBox="0 0 16 16"><circle cx="8" cy="8" r="8"/></svg>
+            </h1> 
+        </div>
+        <ul class="d-flex gap-40">
+            <li><a href="#">商品列表</a></li>
+            <li><a href="#">品牌故事</a></li>
+        </ul>
+    </div>
+    <div class="copyright text-center pt-36">
+        <p>Copyright ©2025 URBNSTYLE</p>
+        <p>All Rights Reserved.</p>
+    </div>
+</div>
