--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,5 +1,10 @@
-@import './layout/header.scss';
-@import './layout/footer.scss';
+@import './helper/utils';
+@import './helper/variables';
 
+@import './base/reset';
+@import './base/base';
 
-@import './pages/index.scss';
+@import './layout/header';
+@import './layout/footer';
+
+@import './pages/index';
