--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1,3 +1,159 @@
-.index-title {
-  font-size: 100px;
+.buy{
+    .buyText{
+        align-self: center;
+        padding-left: 10%;
+        position: absolute;
+        z-index: 1;
+    }
+    h2, p{
+        color: $Neutral-White;
+    }
+    a{
+        background: $primary-300;
+        border: 1px solid $primary-300;
+        border-radius: 4px;
+    }
+    a:hover{
+        color: $Neutral-White;
+        background: $Link-Blue;
+        border: 1px solid $Link-Blue;
+    }
+    img{
+        width: 100%;
+        position: relative;
+        z-index: 0;
+    }
+}
+
+h3{
+    font-size: 48px;
+    font-weight: 700;
+}
+
+.New{
+    max-width: 1296px;
+    margin: 0 auto;
+    padding-top: 64px;
+    padding-bottom: 64px;
+    p{
+        font-size: 32px;
+    }
+    ul{
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 32px;
+        justify-content: space-between;
+    }
+    li{
+        width: 49%;
+        margin-bottom: 40px;
+    }
+    h4{
+        font-size: 20px;
+        font-weight: 700;
+    }
+    ul p{
+        font-size: 16px;
+        font-weight: 500;
+    }
+    img:hover{
+        opacity: 50%;
+    }
+}
+
+h5{
+    font-size: 32px;
+    font-weight: 700;
+    margin-bottom: 16px;
+}
+
+.hotSale{
+    padding-top: 64px;
+    padding-bottom: 64px;
+    max-width: 1296px;
+    margin: 0 auto;
+    ul{
+        display: flex;
+        justify-content: space-between;
+    }
+    li{
+        width: 24%;
+    }
+    p{
+        color: $primary-400;
+        padding: 8px 12px 8px 12px;
+        background: $primary-100;
+        position: absolute;
+        z-index: 1;
+    }
+    img:hover{
+        opacity: 50%;
+        position: relative;
+        z-index: 0;
+    }
+}
+
+h6{
+    color: $Neutral-White;
+    font-size: 28px;
+    font-weight: 700;
+}
+
+.series{
+    max-width: 1296px;
+    margin: 0 auto;
+    padding-top: 64px;
+    padding-bottom: 64px;
+    ul{
+        display: flex;
+        justify-content: space-between;
+    }
+    li{
+        width: 24%;
+    }
+    img{
+        filter: brightness(70%);
+    }
+    img:hover{
+        opacity: 50%;
+    }
+    p{
+        color: $Neutral-White;
+        font-size: 24px;
+    }
+    .series img{
+        position: relative;
+        z-index: 0;  
+    }
+    .seriesText{
+        max-width: 20%;
+        text-align: center;
+        position: absolute;
+        z-index: 1;
+        margin: 0 auto;
+        align-self: center;
+        padding-left: 2.5%;
+    }
+}
+
+.discount{
+    background: $primary-200;
+    justify-content: center;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    p{
+        font-size: 24px;
+        font-weight: 700;
+    }
+    a{
+        color: $Neutral-White;
+        background: $Neutral-900;
+        border: 1px solid $Neutral-900;
+        border-radius: 4px;
+    }
+    a:hover{
+        color: $Neutral-White;
+        background: $Link-Blue;
+        border: 1px solid $Link-Blue;
+    }
 }
